fixed layout issue in the languages

--- a/src/Styles - SASS/TitleDetails.scss
+++ b/src/Styles - SASS/TitleDetails.scss
@@ -50,13 +50,18 @@
       border-radius: 10px;
     }
   }
-
+  .languages {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  }
   .title-language {
     background-color: variables.$main-grey;
     width: fit-content;
     padding: 5px;
     border-radius: 4px;
-    display: inline;
+
     margin: 0 10px;
   }
   .rating {
